2003-09-24  David Hyatt  <hyatt@apple.com>

	Fix for 3430612, crash on about:blank in updateHoverActiveState.  Just missing
	a null-check.  Also remove a hover optimization that was bogus.
	
        Reviewed by darin

        * khtml/rendering/render_layer.cpp:
        (RenderLayer::updateHoverActiveState):

2003-09-24  Richard Williamson   <rjw@apple.com>

	Fixed 3420736.  Clear renderer caches when get an ATS font changed notification.  This fix may be moot depending on progress toward fixing 2695906.

        * kwq/WebCoreBridge.h:
        * kwq/WebCoreBridge.mm:
        (+[WebCoreBridge updateAllViews]):

2003-09-24  Darin Adler  <darin@apple.com>

        - a new test for JavaScript date parsing

        * layout-tests/fast/js/date-parse-test-expected.txt: Added.
        * layout-tests/fast/js/date-parse-test.html: Added.

2003-09-24  Darin Adler  <darin@apple.com>

        Reviewed by Ken.

        - fixed ownerElement for documents in HTML objects (helpful for some work Dave is doing)

        * khtml/khtml_part.h: Change name of frame function to childFrame for clarity.
        * khtml/khtml_part.cpp:
        (KHTMLPart::slotChildStarted): Call the frame function by its new name, childFrame.
        (KHTMLPart::slotChildCompleted): Ditto.
        (KHTMLPart::slotChildURLRequest): Ditto.
        (KHTMLPart::childFrame): Change name from frame to childFrame for clarity, and make it work
        for parts inside HTML objects, not just normal frames and iframes. The change in behavior is
        the actual fix. Note that for the three callers above, it's an error to call this when the
        result would be 0, so there's no harm in doing the extra search of HTML objects in those cases.

        * khtml/xml/dom_docimpl.cpp: (DocumentImpl::ownerElement): Call the frame function by its new
        name, childFrame. This is the caller that will benefit most from the change in behavior.
